<resources>
    <string name="app_name">iTutor</string>
    <string name="LoginPasswordHint">Password</string>
    <string name="LoginUsernameText">Username</string>
    <string name="LoginButtonText">Login</string>
    <string name="SkillPageButtonText">Skills</string>
    <string name="TutorSearchButtonText">Search For Tutors</string>
    <string name="MyTutorsButtonText">My Tutors</string>
    <string name="MyStudentsButtonText">My Students</string>
    <string name="StudentSearchButtonText">Search For Students</string>
    <string name="title_activity_tutor_search">TutorSearchActivity</string>
    <string name="title_activity_student_search">StudentSearchActivity</string>
    <string name="title_activity_my_students">MyStudentsActivity</string>
    <string name="title_activity_my_tutors">MyTutorsActivity</string>
    <string name="title_activity_skill_page">SkillPageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Sign up page text -->
    <string name="hint_username">User Name</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_password2nd">Confirm password</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_phonenumber">Phone number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TutorSearchHintText">Enter Skill</string>
    <string name="TutorSkillSearchButtonText">Search For Tutor</string>
    <string name="StudentSkillsSearchButton">Search For Student</string>
    <string name="StudentSearchTextHint">Enter Skill</string>
    <string name="title_activity_display_person">DisplayPersonActivity</string>
    <string name="NameTextViewe">Name:</string>
    <string name="EmailTextView">Email Address:</string>
    <string name="TelephoneTextView">Telephone Number:</string>
    <string name="MajorTextView">Major:</string>
    <string name="DisplaySkillName">Skill Name:</string>
    <string name="DisplaySkillDescription">Skill Description:</string>string>

    <!-- Welcome page text  -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- landing page -->
    <string name="landing_intro">Welcome to iTutor</string>

    <!-- Logo description -->
    <string name="logo_description">Logo description</string>

    <!-- Personal info -->
    <string name="personal_info_textview">Tell us more about you!</string>
    <string name="continue_button">Continue</string>
    <string name="major_pick">Major:</string>
    <string name="TeachingTexztString">Skill:</string>
    <string name="MyTutorsSkillTaughtTextView">Skill:</string>
    <string name="title_activity_try">TryActivity</string>

</resources>
