<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandingPageActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLandingPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarLandingPage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/landing_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/landing_intro"
        android:textColor="#008577"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/SkillPageButton"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/SkillPageButtonText"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/TutorSkillSearchButton"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/TutorSearchButtonText"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/MyTutorsButton"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/MyTutorsButtonText"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/MyStudentsButton"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/MyStudentsButtonText"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/StudentSearchButton"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/StudentSearchButtonText"
        android:textSize="18dp"
        android:textStyle="bold"/>
</LinearLayout>