<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarLogin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

        <!-- UserName-->
        <EditText
            android:id="@+id/signup_input_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/hint_username"
            android:inputType="textNoSuggestions"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <!--Email-->
        <EditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <!-- Password-->
        <EditText
            android:id="@+id/signup_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <!-- Password Re-enter-->
        <EditText
            android:id="@+id/signup_input_reEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/hint_password2nd"
            android:inputType="textPassword"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <Button
            android:id="@+id/signup_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up" />

</LinearLayout>