<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:text="@string/NameTextViewe" />

    <TextView
        android:id="@+id/PersonNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/NameTextView" />

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NameTextView"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:text="@string/EmailTextView" />

    <TextView
        android:id="@+id/TelephoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailTextView"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:text="@string/TelephoneTextView" />

    <TextView
        android:id="@+id/PersonEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TelephoneTextView"
        android:layout_toEndOf="@+id/EmailTextView" />

    <TextView
        android:id="@+id/PersonTelephoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TelephoneTextView"
        android:layout_toEndOf="@+id/TelephoneTextView" />

    <TextView
        android:id="@+id/MajorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TelephoneTextView"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:text="@string/MajorTextView" />

    <TextView
        android:id="@+id/PersonMajorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/MajorTextView"
        android:layout_toEndOf="@+id/MajorTextView" />


</RelativeLayout>