<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="53dp"
        android:ems="10"
        android:hint="@string/LoginPasswordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginUsername" />

    <EditText
        android:id="@+id/LoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/LoginUsernameText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/LoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="166dp"
        android:text="@string/LoginButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />
</android.support.constraint.ConstraintLayout>